- refactored API to use URI instead of URL - chanegd implementations to new API - added a TODO file for the API - Jackreabbit impmeetation for Hotfolder is nearly complete - use the same pattern for all copy constructors - added copy constructors for AbbyOCRImage and Process - Merger can now operate on streams